# Numerical_Approxiamtion_PCSC

./: CMakeLists.txt  FFTreal.cpp  FFTreal.h  Graph.cpp  Graph.h  Lagrange.cpp  Lagrange.h  LeastSquare.cpp  LeastSquare.h  PieceWiseContinuePolynomial.cpp  PieceWiseContinuePolynomial.h  README.md  Test.cpp  Test.h  gnuplot_i.cpp  gnuplot_i.hpp  main.cpp  readFile.cpp  readFile.h
doc/: Doxyfile
doc/html/: _abstract_numerical_approximation_8cpp.html  _abstract_numerical_approximation_8cpp_source.html  _abstract_numerical_approximation_8h.html  _abstract_numerical_approximation_8h_source.html  _c_make_c_compiler_id_8c.html  _c_make_c_compiler_id_8c_source.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_make_c_x_x_compiler_id_8cpp_source.html  _d_f_t_8cpp.html  _d_f_t_8cpp_source.html  _d_f_t_8h.html  _d_f_t_8h_source.html  _div_mat_8cpp.html  _div_mat_8cpp_source.html  _div_mat_8h.html  _div_mat_8h_source.html  _f_f_t_8cpp.html  _f_f_t_8cpp_source.html  _f_f_t_8h.html  _f_f_t_8h_source.html  _f_f_treal_8cpp.html  _f_f_treal_8cpp_source.html  _f_f_treal_8h.html  _f_f_treal_8h_source.html  _f_f_ttest_8cpp.html  _f_f_ttest_8cpp_source.html  _fourier_approximation_8cpp.html  _fourier_approximation_8cpp_source.html  _fourier_approximation_8h.html  _fourier_approximation_8h_source.html  _fourier_transforms.html  _graph_8cpp.html  _graph_8cpp_source.html  _graph_8h.html  _graph_8h_source.html  _lagrange_8cpp.html  _lagrange_8cpp_source.html  _lagrange_8h.html  _lagrange_8h_source.html  _lagrange_polynomial.html  (+145 more)
doc/latex/: _abstract_numerical_approximation_8cpp.tex  _d_f_t_8h.tex  (+101 more)
(+59 files in other folders)
